Fix Checkboxes/Radio field preview for horizontal layout and overflow

--- a/src/web/assets/frontend/src/scss/formie-base.scss
+++ b/src/web/assets/frontend/src/scss/formie-base.scss
@@ -66,6 +66,7 @@
 
 .fui-layout-horizontal .fui-layout-wrap {
     display: flex;
+    flex-wrap: wrap;
 }
 
 
